commented out failing things and updated author + title

--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -7,20 +7,20 @@
 \includegraphics[width=\linewidth]{fig/Logo_Header}
 \mbox{}\\[1pc]
 \begin{center}
-    \huge{ \bfseries AMAZING THESIS}\\[2pc]
+    \huge{ \bfseries Sizing Tasks for Scientific Workflows with Reinforcement Learning}\\[2pc]
 
-    \Large{NAME}\\
-    \large{MAIL}\\[1pc]
-    \large{October 30, 2017}\\[2pc]
+    \Large{Nicolas Zunker}\\
+    \large{n.zunker@campus.tu-berlin.de}\\[1pc]
+    \large{September 30, 2021}\\[2pc]
 
-    MASTER'S THESIS\\
+    BACHELOR'S THESIS\\
     Mobile Cloud Computing Chair\\
-    Technische Universität Berlin
+    Technische Universitaet Berlin
 \end{center}
 \vfill
 
-Examiner 1: Prof. Dr. David Bermbach
-\hfill\llap{Advisor: Jonathan Hasenburg}\\
-Examiner 2: SECOND EXAMINER
+Examiner 1: Prof. Dr. Odej Kao
+\hfill\llap{Advisor: Jonathan Bader}\\
+%Examiner 2: SECOND EXAMINER
 
 \afterpage{\null\thispagestyle{empty}\newpage}
