--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -12,4 +12,4 @@ The growth of the Internet of Things (IoT) will challenge our existing approache
 \addcontentsline{toc}{section}{Zusammenfassung}
 \section*{Zusammenfassung}
 
-Der Aufstieg des Internet of Things (IoT) stellt uns vor neue Herausforderungen bezüglich der Speicherung, Verarbeitung und Darstellung von Daten.
+Der Aufstieg des Internet of Things (IoT) stellt uns vor neue Herausforderungen bezueglich der Speicherung, Verarbeitung und Darstellung von Daten.
