--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -13,7 +13,7 @@ This chapter gives a general introduction into the content of and the motivation
 Thus, many executives feel fear to become unconscious \cite{TheInquisitiveMind}.
 Also, I want to buy \signal{smart home devices} such as the ones listed in table \ref{tab:scenario1_sensor}.
 
-\LTXtable{\textwidth}{tab/scenario1_sensor}
+%\LTXtable{\textwidth}{tab/scenario1_sensor}
 
 %%=========================================
 \section{Goal of the Thesis}
