--- a/refs.bib
+++ b/refs.bib
@@ -55,7 +55,7 @@
 @online{TheInquisitiveMind,
     editor = {{de.in-mind.org}},
     year={2018},
-    title = {Ohnmacht – Über das Gefühl, das Leben nicht im Griff zu haben},
+    title = {Ohnmacht – Ueber das Gefühl, das Leben nicht im Griff zu haben},
     url = {http://de.in-mind.org/article/ohnmacht-ueber-das-gefuehl-das-leben-nicht-im-griff-zu-haben},
     urldate = {2019-01-23}
 }
