--- a/thesis.tex
+++ b/thesis.tex
@@ -26,6 +26,8 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 
 % Tables
 \usepackage{ltxtable}
+%\usepackage{arydshln}
+%\usepackage{tabu, longtable}
 \usepackage{booktabs}
 
 % Needed for code listings
@@ -37,7 +39,7 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 
 \usepackage{floatpag} % to move floatpagenr to topright
 
-% Fußnote
+% Fussnote
 \usepackage[hang]{footmisc}
 \setlength{\footnotemargin}{-0.8em}
 
