--- a/frontmatter/acknowledgment.tex
+++ b/frontmatter/acknowledgment.tex
@@ -6,7 +6,7 @@
 \addcontentsline{toc}{section}{Acknowledgment}
 \section*{Acknowledgment}
 
-I would like to thank the following persons for their great support when writing my thesis at the Mobile Cloud Computing Research Group (MCC) at Technische Universität Berlin.
+I would like to thank the following persons for their great support when writing my thesis at the Mobile Cloud Computing Research Group (MCC) at Technische Universitaet Berlin.
 
 \begin{flushright}
 INITIALS\\[1pc]
