wrote related work section

--- a/thesis.tex
+++ b/thesis.tex
@@ -164,6 +164,7 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 \setcounter{page}{0}
 \pagenumbering{arabic}
 \include{mainmatter/01_introduction}
+\include{mainmatter/02_related_work}
 % Include more chapters as required.
 
 %%=========================================
