added name and initials in declaration and acknowledgements

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -12,5 +12,5 @@ Hiermit erklaare ich, dass ich die vorliegende Arbeit selbststaandig und eigenha
 Die selbstaandige und eigenstaandige Anfertigung versichert an Eides statt:
 \begin{center}
 DATE\\[3pc]
-NAME
+Nicolas Zunker
 \end{center}
