--- a/refs.bib
+++ b/refs.bib
@@ -1,61 +1,105 @@
-@article{versionVektor, 
-    author={D. Stott Parker and Gerald J. Popek and Gerald Rudisin and Allen Stoughton and Bruce J. Walker and Evelyn Walton and Johanna M. Chow and David Edwards and Stephen Kiser and Charles Kline},
-    journal={IEEE Transactions on Software Engineering},
-    title={Detection of Mutual Inconsistency in Distributed Systems},
-    year={1983},
-    volume={SE-9},
-    number={3},
-    pages={240-247},
-    publisher={IEEE}
+@article{versionVektor,
+	title        = {Detection of Mutual Inconsistency in Distributed Systems},
+	author       = {D. Stott Parker and Gerald J. Popek and Gerald Rudisin and Allen Stoughton and Bruce J. Walker and Evelyn Walton and Johanna M. Chow and David Edwards and Stephen Kiser and Charles Kline},
+	year         = 1983,
+	journal      = {IEEE Transactions on Software Engineering},
+	publisher    = {IEEE},
+	volume       = {SE-9},
+	number       = 3,
+	pages        = {240--247}
 }
-
 @article{paxos1998,
-    title={The part-time parliament},
-    author={Lamport, Leslie},
-    journal={ACM Transactions on Computer Systems},
-    volume={16},
-    number={2},
-    pages={133--169},
-    year={1998},
-    publisher={ACM}
+	title        = {The part-time parliament},
+	author       = {Lamport, Leslie},
+	year         = 1998,
+	journal      = {ACM Transactions on Computer Systems},
+	publisher    = {ACM},
+	volume       = 16,
+	number       = 2,
+	pages        = {133--169}
 }
-
 @article{paxos2001,
-  title={Paxos made simple},
-  author={Lamport, Leslie},
-  journal={ACM Sigact News},
-  volume={32},
-  number={4},
-  pages={18--25},
-  year={2001}
+	title        = {Paxos made simple},
+	author       = {Lamport, Leslie},
+	year         = 2001,
+	journal      = {ACM Sigact News},
+	volume       = 32,
+	number       = 4,
+	pages        = {18--25}
 }
-
 @article{cassandra2010,
-    title={Cassandra: a decentralized structured storage system},
-    author={Lakshman, Avinash and Malik, Prashant},
-    journal={ACM SIGOPS Operating Systems Review},
-    volume={44},
-    number={2},
-    pages={35--40},
-    year={2010},
-    publisher={ACM}
+	title        = {Cassandra: a decentralized structured storage system},
+	author       = {Lakshman, Avinash and Malik, Prashant},
+	year         = 2010,
+	journal      = {ACM SIGOPS Operating Systems Review},
+	publisher    = {ACM},
+	volume       = 44,
+	number       = 2,
+	pages        = {35--40}
 }
-
 @article{lamport1982byzantine,
-    title={The Byzantine generals problem},
-    author={Lamport, Leslie and Shostak, Robert and Pease, Marshall},
-    journal={ACM Transactions on Programming Languages and Systems},
-    volume={4},
-    number={3},
-    pages={382--401},
-    year={1982},
-    publisher={ACM}
+	title        = {The Byzantine generals problem},
+	author       = {Lamport, Leslie and Shostak, Robert and Pease, Marshall},
+	year         = 1982,
+	journal      = {ACM Transactions on Programming Languages and Systems},
+	publisher    = {ACM},
+	volume       = 4,
+	number       = 3,
+	pages        = {382--401}
 }
-
 @online{TheInquisitiveMind,
-    editor = {{de.in-mind.org}},
-    year={2018},
-    title = {Ohnmacht – Ueber das Gefühl, das Leben nicht im Griff zu haben},
-    url = {http://de.in-mind.org/article/ohnmacht-ueber-das-gefuehl-das-leben-nicht-im-griff-zu-haben},
-    urldate = {2019-01-23}
+	title        = {Ohnmacht – Ueber das Gefühl, das Leben nicht im Griff zu haben},
+	year         = 2018,
+	url          = {http://de.in-mind.org/article/ohnmacht-ueber-das-gefuehl-das-leben-nicht-im-griff-zu-haben},
+	urldate      = {2019-01-23},
+	editor       = {{de.in-mind.org}}
+}
+@inproceedings{FeedbackBasedAllocation,
+	title        = {Feedback-Based Resource Allocation for Batch Scheduling of Scientific Workflows},
+	author       = {Witt, Carl and Wagner, Dennis and Leser, Ulf},
+	year         = 2019,
+	booktitle    = {2019 International Conference on High Performance Computing   Simulation (HPCS)},
+	volume       = {},
+	number       = {},
+	pages        = {761--768},
+	doi          = {10.1109/HPCS48598.2019.9188055}
+}
+@article{ScientificWorkflows,
+	title        = {Scientific Workflows: Moving Across Paradigms},
+	author       = {Liew, Chee Sun and Atkinson, Malcolm P. and Galea, Michelle and Ang, Tan Fong and Martin, Paul and Hemert, Jano I. Van},
+	year         = 2016,
+	month        = dec,
+	journal      = {ACM Computing Surveys},
+	publisher    = {Association for Computing Machinery},
+	address      = {New York, NY, USA},
+	volume       = 49,
+	number       = 4,
+	doi          = {10.1145/3012429},
+	issn         = {0360-0300},
+	url          = {https://doi.org/10.1145/3012429},
+	issue_date   = {February 2017},
+	abstract     = {Modern scientific collaborations have opened up the opportunity to solve complex problems that require both multidisciplinary expertise and large-scale computational experiments. These experiments typically consist of a sequence of processing steps that need to be executed on selected computing platforms. Execution poses a challenge, however, due to (1) the complexity and diversity of applications, (2) the diversity of analysis goals, (3) the heterogeneity of computing platforms, and (4) the volume and distribution of data.A common strategy to make these in silico experiments more manageable is to model them as workflows and to use a workflow management system to organize their execution. This article looks at the overall challenge posed by a new order of scientific experiments and the systems they need to be run on, and examines how this challenge can be addressed by workflows and workflow management systems. It proposes a taxonomy of workflow management system (WMS) characteristics, including aspects previously overlooked. This frames a review of prevalent WMSs used by the scientific community, elucidates their evolution to handle the challenges arising with the emergence of the “fourth paradigm,” and identifies research needed to maintain progress in this area.},
+	articleno    = 66,
+	numpages     = 39,
+	keywords     = {workflow management systems, workflows, Data-intensive science}
+}
+@inproceedings{ResourceProvisioning,
+	title        = {Resource Provisioning Options for Large-Scale Scientific Workflows},
+	author       = {Juve, Gideon and Deelman, Ewa},
+	year         = 2008,
+	booktitle    = {2008 IEEE Fourth International Conference on eScience},
+	volume       = {},
+	number       = {},
+	pages        = {608--613},
+	doi          = {10.1109/eScience.2008.160}
+}
+@article{Predictability,
+	title        = {Utilization, predictability, workloads, and user runtime estimates in scheduling the IBM SP2 with backfilling},
+	author       = {Mu'alem, A.W. and Feitelson, D.G.},
+	year         = 2001,
+	journal      = {IEEE Transactions on Parallel and Distributed Systems},
+	volume       = 12,
+	number       = 6,
+	pages        = {529--543},
+	doi          = {10.1109/71.932708}
 }
