finished abtract, fixed typo in intro

--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -6,14 +6,13 @@
 \addcontentsline{toc}{section}{Abstract}
 \section*{Abstract}
 
-The growth of cloud computing and big data has lead to increased use of computing clusters to process large datasets. Particularly in the sciences this has become an enormous advantage for analysis and research and it has become common for scientists to break down their computing needs into a sequence of smaller tasks, a so called workflow. These workflows can then be run on computer clusters and cloud computing platforms. One of the most pertinent fields for this is Bioinformatics.  
-Another result of the rise of cloud computing is that there has also been a paradigm shift towards designing programs to be as best suited as possible for cluster environments and this has also led to a shift towards containerization due to the inherent advantage of their 'write once, deploy anywhere' philosophy for such clusters. The result of this combination of factors is the increased popularity of scientific workflows and the frameworks or scripting languages which can be used to make such workflows scalable and reproducible, through containerization, and prepare them for deployment to various cloud computing platforms and management softwares (e.g. Kubernetes, AWS etc.). Nextflow is one such bioinformatics worfklow manager. It includes both a domain specific language to compose tasks into protable worfklows as well as the workflow management softtware for deployment to the various different execution platforms with which it is compatible.    
+The growth of computational power and big data has lead to a massive increase in demand for computing services by users who aim to process large datasets. Particularly in the natural sciences it has become common for scientists to break down their computing needs into a sequence of smaller tasks, a so called workflow. These workflows can then be run on a variety of different execution platforms, depending on the users need.  One of the most pertinent fields for this is Bioinformatics.
 
-Since workflows are composed of segregated inter-dependent tasks which can run in their own containers, the individual tasks which make up a workflow can be assigned differing computational resources and doing so can speed up the entire process and/or make it more efficient. This is naturally of particular interest to the scientists running these workflows since it will either lower the costs or speed up the process or both. This thesis aims to investigate the allocation of resources to individual tasks and specifically how reinforcement learning can be applied to improve the allocation to be as optimal as possible. Since the tasks within these scientific workflows will reoccur quite often the use of an algorithm which learns "on the go" presents a potential for near optimal resource allocation in the long run. The implementation will be integrated into the nextflow source code.
+Since workflows are composed of segregated inter-dependent tasks which can run in their own containers, the individual tasks which make up a workflow can be assigned a fraction of the computational resources available to the entire execution platform and doing so intelligently can make the entire process more efficient. This is naturally of particular interest to the users of these workflows since it will either lower their costs or speed up the entire workflow or both. 
 
-Differing approaches and reinforcement learning algorithms will be compared and their performance will be judged firstly by how they minimize runtime and secondly by their maximization of resource usage. The primary approach will use a simple gradient bandit and may be compared to other approaches such as TD-learning.
+This thesis aims to investigate the allocation of resources to individual tasks and specifically how reinforcement learning can be applied to improve the allocation to be as optimal as possible. The implementation will be integrated into source code  of the popular scientific workflow management system nextflow and tested against common bioinformatic workflows. Two different reinforcement learning approaches (Gradient Bandits and Q-Learning) will be compared and their performance will be judged against both eachother as well as the default configuration of resources.
 
-Should such an algorithm prove useful and provide an improvement in resource usage it would naturally indicate this is an area which should be explored further and that the use of these methods will help make scientific workflows more efficient. This would be helpful to both the scientists which use workflow managers as well as the administrators of the execution platforms on which such workflow managers will run.
+Should such an approach prove useful and provide an improvement in resource usage it would naturally indicate this is an area which should be explored further and that the use of these methods can improve scientific workflows. This would be helpful to both the scientists which use workflow managers as well as the administrators of the execution platforms on which the workflows are run.
 
 
 %\newpage
